# mcp-server-box

./: .dockerignore  .gitignore  Dockerfile  README.md  SEARCH_TEST_SETUP.md  config_fixed.json  debug_box_auth.py  pyproject.toml  run_search_test
docs/: box_tools_ai.md  box_tools_files.md  box_tools_folders.md  box_tools_generic.md  box_tools_groups.md  box_tools_search.md  box_tools_users.md  box_tools_web_link.md
src/: box_tools_collaboration.py  box_tools_share_links.py  config.py  mcp_server_box.py  middleware.py  oauth_endpoints.py  server.py  server_context.py
src/mcp_auth/: auth_box.py  auth_box_api.py  auth_scalekit.py  auth_token.py
src/tool_registry/: ai_tools.py  collaboration_tools.py  doc_gen_tools.py  file_text_representation.py  file_tools.py  file_transfer_tools.py  folder_tools.py  generic_tools.py  group_tools.py  metadata_tools.py  search_tools.py  shared_link_tools.py  user_tools.py  web_link_tools.py
src/tools/: box_tools_ai.py  (+10 more)
tests/: conftest.py  run_search_test.py  run_tests.py  test_all_box_tools.py  test_app_only.py  test_basic_jwt.py  test_basic_tools.py  test_box_api_search_metadata.py  test_box_shared_links.py  test_box_tools_ai.py  test_box_tools_collaboration.py  test_box_tools_file_representation.py  test_box_tools_file_transfers.py  test_box_tools_files.py  test_box_tools_folders.py  test_box_tools_generic.py  test_box_tools_groups.py  test_box_tools_metadata.py  test_box_tools_users.py  test_box_tools_weblink.py  test_encoding_issue.py  test_file_ops.py  test_key_format.py  test_mcp_server_box.py  test_server_auth.py
